[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/components/SelectTypeStudyPopUp/components/OptionPreview/components/TypeOfStudy/components/DailyStudy/DailyStudy.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/components/SelectTypeStudyPopUp/components/OptionPreview/components/TypeOfStudy/components/CustomStudy/CustomStudy.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/stylized_shape/Rectangle.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/components/SelectTypeStudyPopUp/components/OptionPreview/components/TypeOfStudy/TypeOfStudy.gd" type="Script" id=4]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/H5_headline.tres" type="DynamicFont" id=5]

[node name="TypeOfStudy" type="Control"]
margin_left = 128.0
margin_right = 628.0
margin_bottom = 342.0
rect_min_size = Vector2( 500, 0 )
script = ExtResource( 4 )

[node name="Style" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundBox" parent="Style" instance=ExtResource( 3 )]
background_color = "DARK"

[node name="TypesContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 24
custom_constants/margin_top = 42
custom_constants/margin_left = 24
custom_constants/margin_bottom = 42

[node name="DailyStudy" parent="TypesContainer" instance=ExtResource( 1 )]

[node name="CustomStudy" parent="TypesContainer" instance=ExtResource( 2 )]
visible = false

[node name="ErrorMessage" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 24
custom_constants/margin_top = 42
custom_constants/margin_left = 24
custom_constants/margin_bottom = 42

[node name="Message" type="Label" parent="ErrorMessage"]
margin_left = 24.0
margin_top = 156.0
margin_right = 476.0
margin_bottom = 186.0
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
autowrap = true
